# Qt6_CMake_Console_Template

./: CMakeLists.txt  README.md  main.cpp
